# py-screenshot-service

./: .env.example  .gitignore  README.md  init.bat  init.sh  main.py  pyproject.toml  requirements.txt  service.sh
services/: image_composite_service.py  screenshot_service.py
storage/: storage.py
