[project]
name = "screenshot-service"
version = "0.1.0"
description = "A screenshot service using Playwright"
authors = []
dependencies = [
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "playwright>=1.40.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.1.0",
    "pillow>=11.1.0",
    "qrcode>=8.1",
]

[tool.playwright]
install-browsers = ["chromium"]
